--- a/.github/workflows/build-sdkjs.yml
+++ b/.github/workflows/build-sdkjs.yml
@@ -2,11 +2,6 @@ name: Build SDKJS with HWP Shortcuts
 
 on:
   workflow_dispatch:
-  push:
-    branches: [main]
-    paths:
-      - 'patches/**'
-      - '.github/workflows/build-sdkjs.yml'
 
 jobs:
   build-sdkjs:
@@ -69,11 +64,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          rm -f sdkjs-custom/.gitkeep
           git add sdkjs-custom/
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "build: Update SDKJS with HWP shortcuts"
-            git push
-          fi
+          git commit -m "chore: add pre-built SDKJS with HWP shortcuts" || echo "No changes to commit"
+          git push
