--- a/.github/workflows/build-onlyoffice-full.yml
+++ b/.github/workflows/build-onlyoffice-full.yml
@@ -16,7 +16,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 480  # 8시간
+    timeout-minutes: 480
 
     permissions:
       contents: read
@@ -30,8 +30,6 @@ jobs:
         run: |
           echo "=== Before cleanup ==="
           df -h
-
-          # 불필요한 도구 삭제 (더 많이)
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /opt/ghc
           sudo rm -rf /usr/local/share/boost
@@ -42,14 +40,9 @@ jobs:
           sudo rm -rf /opt/hostedtoolcache/Python
           sudo rm -rf /opt/hostedtoolcache/Ruby
           sudo rm -rf /opt/hostedtoolcache/go
-
-          # Docker 정리
           docker system prune -af || true
-
-          # apt 캐시 정리
           sudo apt-get clean
           sudo apt-get autoremove -y
-
           echo "=== After cleanup ==="
           df -h
 
@@ -57,43 +50,14 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            git \
-            python3 \
-            python3-pip \
-            build-essential \
-            cmake \
-            curl \
-            wget \
-            p7zip-full \
-            default-jdk \
-            libcurl4-openssl-dev \
-            libssl-dev \
-            libx11-dev \
-            libxext-dev \
-            libxrender-dev \
-            libfreetype6-dev \
-            libfontconfig1-dev \
-            libglib2.0-dev \
-            libcairo2-dev \
-            libpango1.0-dev \
-            libgtk-3-dev \
-            libgdk-pixbuf2.0-dev \
-            libasound2-dev \
-            libpulse-dev \
-            libnss3-dev \
-            libatk1.0-dev \
-            libatk-bridge2.0-dev \
-            libdrm-dev \
-            libgbm-dev \
-            libxcomposite-dev \
-            libxdamage-dev \
-            libxfixes-dev \
-            libxrandr-dev \
-            libxshmfence-dev \
-            libxkbcommon-dev \
-            fonts-nanum \
-            fonts-noto-cjk \
-            fonts-noto-cjk-extra
+            git python3 python3-pip build-essential cmake curl wget p7zip-full \
+            default-jdk libcurl4-openssl-dev libssl-dev libx11-dev libxext-dev \
+            libxrender-dev libfreetype6-dev libfontconfig1-dev libglib2.0-dev \
+            libcairo2-dev libpango1.0-dev libgtk-3-dev libgdk-pixbuf2.0-dev \
+            libasound2-dev libpulse-dev libnss3-dev libatk1.0-dev libatk-bridge2.0-dev \
+            libdrm-dev libgbm-dev libxcomposite-dev libxdamage-dev libxfixes-dev \
+            libxrandr-dev libxshmfence-dev libxkbcommon-dev \
+            fonts-nanum fonts-noto-cjk fonts-noto-cjk-extra
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -116,28 +80,17 @@ jobs:
       - name: Configure build for Document Server
         run: |
           cd /tmp/build_tools
-
-          # Document Server 빌드 설정 (Linux 64bit)
-          python3 configure.py \
-            --module documentserver \
-            --platform linux_64 \
-            --update false
-
+          python3 configure.py --module documentserver --platform linux_64 --update false
           echo "=== Build configured ==="
           cat config.json || true
 
       - name: Download and build (Full)
         run: |
           cd /tmp/build_tools
-
           echo "Starting full build process..."
           echo "This will download sources and compile everything."
           echo "Expected time: 2-4 hours"
-
-          # 전체 빌드 실행 (에러 무시하지 않음)
           python3 make.py 2>&1 | tee /tmp/build.log
-
-          # 빌드 결과 확인
           echo "=== Build completed, checking output ==="
           ls -la /tmp/build_tools/out/ 2>/dev/null || echo "No out folder yet"
           find /tmp/build_tools -name "documentserver" -type d 2>/dev/null | head -10
@@ -146,19 +99,13 @@ jobs:
 
       - name: Install Korean fonts to build output
         run: |
-          # 빌드된 폰트 디렉토리 찾기
           FONTS_DIR=$(find /tmp/build_tools -path "*/documentserver/*/fonts" -type d 2>/dev/null | head -1)
-
           if [ -z "$FONTS_DIR" ]; then
             FONTS_DIR=$(find /tmp/build_tools/out -name "fonts" -type d 2>/dev/null | head -1)
           fi
-
           echo "Fonts directory: $FONTS_DIR"
-
           if [ -n "$FONTS_DIR" ]; then
-            # 나눔폰트 복사
             cp /usr/share/fonts/truetype/nanum/*.ttf "$FONTS_DIR/" 2>/dev/null || true
-            # Noto CJK 폰트 복사
             cp /usr/share/fonts/opentype/noto/*.otf "$FONTS_DIR/" 2>/dev/null || true
             cp /usr/share/fonts/opentype/noto/*.ttc "$FONTS_DIR/" 2>/dev/null || true
             echo "Korean fonts copied to $FONTS_DIR"
@@ -169,18 +116,13 @@ jobs:
 
       - name: Apply HWP shortcuts patch
         run: |
-          # sdkjs 위치 찾기
           SDKJS_DIR=$(find /tmp/build_tools -type d -name "sdkjs" 2>/dev/null | head -1)
-
           if [ -z "$SDKJS_DIR" ]; then
             echo "WARNING: sdkjs directory not found, skipping patch"
             exit 0
           fi
-
           echo "Found sdkjs at: $SDKJS_DIR"
-
           SHORTCUTS_FILE="$SDKJS_DIR/word/Editor/Shortcuts.js"
-
           if [ -f "$SHORTCUTS_FILE" ]; then
             echo "Applying HWP shortcuts patch..."
             cat ${{ github.workspace }}/patches/hwp-shortcuts-patch.js >> "$SHORTCUTS_FILE"
@@ -192,15 +134,10 @@ jobs:
       - name: Prepare Docker build context
         run: |
           mkdir -p ${{ github.workspace }}/docker-build
-
-          # 빌드된 Document Server 찾기
           DS_OUT=$(find /tmp/build_tools/out -name "documentserver" -type d 2>/dev/null | head -1)
-
           if [ -z "$DS_OUT" ]; then
-            # 대안: linux_64 출력 폴더 찾기
             DS_OUT=$(find /tmp/build_tools/out -path "*linux_64*" -type d 2>/dev/null | head -1)
           fi
-
           if [ -n "$DS_OUT" ] && [ -d "$DS_OUT" ]; then
             echo "Found Document Server at: $DS_OUT"
             cp -r "$DS_OUT" ${{ github.workspace }}/docker-build/documentserver
@@ -209,53 +146,11 @@ jobs:
             echo "=== Searching for any output ==="
             find /tmp/build_tools/out -type d 2>/dev/null | head -30
             find /tmp/build_tools -name "*.deb" 2>/dev/null | head -10
-
-            # 빌드 로그 마지막 부분 출력
             echo "=== Last 100 lines of build log ==="
             tail -100 /tmp/build.log || true
-
             exit 1
           fi
-
-          # Dockerfile 생성
-          cat > ${{ github.workspace }}/docker-build/Dockerfile << 'DOCKERFILE'
-FROM ubuntu:22.04
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-# 빌드된 Document Server 복사
-COPY documentserver /var/www/onlyoffice/documentserver
-
-# 런타임 의존성 설치
-RUN apt-get update && apt-get install -y \
-    nginx \
-    supervisor \
-    postgresql-client \
-    redis-tools \
-    curl \
-    fonts-nanum \
-    fonts-noto-cjk \
-    fonts-noto-cjk-extra \
-    libcurl4 \
-    libssl3 \
-    libx11-6 \
-    libxrender1 \
-    libxext6 \
-    libfreetype6 \
-    libfontconfig1 \
-    && rm -rf /var/lib/apt/lists/*
-
-# 폰트 캐시 재생성
-RUN fc-cache -fv
-
-# 권한 설정
-RUN chown -R www-data:www-data /var/www/onlyoffice
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
-DOCKERFILE
-
+          cp ${{ github.workspace }}/Dockerfile.source ${{ github.workspace }}/docker-build/Dockerfile
           echo "=== Docker build context ==="
           ls -la ${{ github.workspace }}/docker-build/
           ls -la ${{ github.workspace }}/docker-build/documentserver/ 2>/dev/null | head -20 || true
